--- a/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
+++ b/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DelReview.cs" />
+    <Compile Include="DelTargets.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
