--- a/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
+++ b/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
@@ -42,8 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DelReview.cs" />
-    <Compile Include="DelTargets.cs" />
+    <Compile Include="1to3\DelReview.cs" />
+    <Compile Include="1to3\DelTargets.cs" />
+    <Compile Include="1to3\DelWhy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
