Lambda, shorten method to lambda example

--- a/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
+++ b/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
@@ -45,6 +45,7 @@
     <Compile Include="1to3\DelReview.cs" />
     <Compile Include="1to3\DelTargets.cs" />
     <Compile Include="1to3\DelWhy.cs" />
+    <Compile Include="1to3\LambdaReview.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
