--- a/DotNet/Learn_PLINQ_Async_Tasks/Learn_PLINQ_Async_Tasks/Learn_PLINQ_Async_Tasks.csproj
+++ b/DotNet/Learn_PLINQ_Async_Tasks/Learn_PLINQ_Async_Tasks/Learn_PLINQ_Async_Tasks.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PLINQ\TasksStuff.cs" />
     <Compile Include="PLINQ\WordReversal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
