--- a/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
+++ b/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
@@ -54,6 +54,7 @@
     <Compile Include="5to10\MulticastDele.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Review\ReviewerDelegatesFuncActions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
