--- a/SoftwareEngineering/Fundamentals/Regex/Regex/Regex.csproj
+++ b/SoftwareEngineering/Fundamentals/Regex/Regex/Regex.csproj
@@ -34,7 +34,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegexTests.cs" />
+    <Compile Include="RegexHelper.cs" />
+    <Compile Include="Data.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
