Added use non dependency injected use case.

--- a/DotNet/Autofac_Dependency/Autofac_Dependency/Autofac_Dependency.csproj
+++ b/DotNet/Autofac_Dependency/Autofac_Dependency/Autofac_Dependency.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Interfaces.cs" />
+    <Compile Remove="Log_Implementation.cs" />
   </ItemGroup>
 </Project>
