--- a/SoftwareEngineering/WhiteboardPractice/WhiteboardPractice/WhiteboardPractice.csproj
+++ b/SoftwareEngineering/WhiteboardPractice/WhiteboardPractice/WhiteboardPractice.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="StackDivision.cs" />
+  </ItemGroup>
 </Project>
