--- a/DotNet/MasterUnitTesting/UnitTestsLibrary/UnitTestsLibrary.csproj
+++ b/DotNet/MasterUnitTesting/UnitTestsLibrary/UnitTestsLibrary.csproj
@@ -6,5 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="NUnit.Runners" Version="3.8.0" />
+    <PackageReference Include="NUnit.Console" Version="3.8.0" />
   </ItemGroup>
 </Project>
