--- a/DotNet/Autofac_Dependency/Autofac_Samples/Autofac_Samples.csproj
+++ b/DotNet/Autofac_Dependency/Autofac_Samples/Autofac_Samples.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+  </ItemGroup>
+
 </Project>
