--- a/DotNet/MasterUnitTesting/MasterUnitTestLibrary/packages.config
+++ b/DotNet/MasterUnitTesting/MasterUnitTestLibrary/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dynamitey" version="2.0.9.136" targetFramework="net472" />
+  <package id="ImpromptuInterface" version="7.0.1" targetFramework="net472" />
   <package id="NUnit" version="3.10.1" targetFramework="net472" />
 </packages>
