--- a/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SOLID\SingleResponsibilityPrinciple.cs" />
+    <Compile Include="SOLID\OpenClosePrinciple.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SOLID\" />
