added example of liskov substitution principle with virtual/override

--- a/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -40,10 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SOLID\SingleResponsibilityPrinciple.cs" />
     <Compile Include="SOLID\OpenClosePrinciple.cs" />
+    <Compile Include="SOLID\LiskovSubstitutionPrinciple.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SOLID\" />
