--- a/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -44,6 +44,7 @@
     <Compile Include="SOLID\SingleResponsibilityPrinciple.cs" />
     <Compile Include="SOLID\OpenClosePrinciple.cs" />
     <Compile Include="SOLID\LiskovSubstitutionPrinciple.cs" />
+    <Compile Include="SOLID\InterfaceSegregationPrinciple.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SOLID\" />
