--- a/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -38,6 +38,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.ValueTuple">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
+    <Reference Include="mscorlib" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -45,9 +49,13 @@
     <Compile Include="SOLID\OpenClosePrinciple.cs" />
     <Compile Include="SOLID\LiskovSubstitutionPrinciple.cs" />
     <Compile Include="SOLID\InterfaceSegregationPrinciple.cs" />
+    <Compile Include="SOLID\DependencyInversionPrinciple.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="SOLID\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
