--- a/DotNet/UnitTestMosh/BusinessLib.UnitTests/packages.config
+++ b/DotNet/UnitTestMosh/BusinessLib.UnitTests/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net472" />
+  <package id="NUnit" version="3.8.1" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net472" />
 </packages>
