Added misc. test cases

--- a/DotNet/UnitTestMosh/BusinessLib/BusinessLib.csproj
+++ b/DotNet/UnitTestMosh/BusinessLib/BusinessLib.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fundamentals\CustomerController.cs" />
+    <Compile Include="Fundamentals\ErrorLogger.cs" />
+    <Compile Include="Fundamentals\HtmlFormatter.cs" />
     <Compile Include="Fundamentals\Math.cs" />
     <Compile Include="Fundamentals\Reservation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
