--- a/DotNet/UnitTestMosh/BusinessLib/BusinessLib.csproj
+++ b/DotNet/UnitTestMosh/BusinessLib/BusinessLib.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Fundamentals\CustomerController.cs" />
     <Compile Include="Fundamentals\ErrorLogger.cs" />
+    <Compile Include="Fundamentals\FizzBuzz.cs" />
     <Compile Include="Fundamentals\HtmlFormatter.cs" />
     <Compile Include="Fundamentals\Math.cs" />
     <Compile Include="Fundamentals\Reservation.cs" />
