--- a/DotNet/UnitTestMosh/BusinessLib.UnitTests/BusinessLib.UnitTests.csproj
+++ b/DotNet/UnitTestMosh/BusinessLib.UnitTests/BusinessLib.UnitTests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="CustomerControllerTests.cs" />
     <Compile Include="ErrorLoggerTests.cs" />
+    <Compile Include="FizzBuzzTests.cs" />
     <Compile Include="HtmlFormatterTests.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="ReserverationTests.cs" />
