Added DemeritPointsCalculator and DemeritPointsCalculatorTests

--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Fundamentals\CustomerController.cs" />
+    <Compile Include="Fundamentals\DemeritPointsCalculator.cs" />
     <Compile Include="Fundamentals\ErrorLogger.cs" />
     <Compile Include="Fundamentals\FizzBuzz.cs" />
     <Compile Include="Fundamentals\HtmlFormatter.cs" />
