--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib.UnitTests/BusinessLib.UnitTests.csproj
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib.UnitTests/BusinessLib.UnitTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="MathTests.cs" />
     <Compile Include="ReserverationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StackTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
