--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Fundamentals\HtmlFormatter.cs" />
     <Compile Include="Fundamentals\Math.cs" />
     <Compile Include="Fundamentals\Reservation.cs" />
+    <Compile Include="Fundamentals\Stack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
