--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib.UnitTests/BusinessLib.UnitTests.csproj
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib.UnitTests/BusinessLib.UnitTests.csproj
@@ -55,9 +55,11 @@
     <Compile Include="CustomerControllerTests.cs" />
     <Compile Include="DemeritPointsCalculatorTests.cs" />
     <Compile Include="ErrorLoggerTests.cs" />
+    <Compile Include="FakeFileReader.cs" />
     <Compile Include="FizzBuzzTests.cs" />
     <Compile Include="HtmlFormatterTests.cs" />
     <Compile Include="MathTests.cs" />
+    <Compile Include="Mocking\VideoServiceTests.cs" />
     <Compile Include="ReserverationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StackTests.cs" />
@@ -70,6 +72,9 @@
       <Project>{E7D7E8D3-E15C-4B9D-8A79-994755CE5BF7}</Project>
       <Name>BusinessLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Fundamentals\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
