--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Fundamentals\Math.cs" />
     <Compile Include="Fundamentals\Reservation.cs" />
     <Compile Include="Fundamentals\Stack.cs" />
+    <Compile Include="Mocking\FileReader.cs" />
+    <Compile Include="Mocking\Program.cs" />
     <Compile Include="Mocking\VideoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
