added mocking test examples

--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib/BusinessLib.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Fundamentals\Reservation.cs" />
     <Compile Include="Fundamentals\Stack.cs" />
     <Compile Include="Mocking\FileReader.cs" />
+    <Compile Include="Mocking\OrderService.cs" />
+    <Compile Include="Mocking\Product.cs" />
     <Compile Include="Mocking\Program.cs" />
     <Compile Include="Mocking\VideoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
