--- a/DotNet/UnitTests/UnitTestMosh/BusinessLib.UnitTests/packages.config
+++ b/DotNet/UnitTests/UnitTestMosh/BusinessLib.UnitTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Moq" version="4.9.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.2.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.2.1" targetFramework="net472" />
