project file saved

--- a/SoftwareEngineering/DesignPatterns/DesignPatternsVB/DesignPatternsVB.vbproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatternsVB/DesignPatternsVB.vbproj
@@ -109,7 +109,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Singleton\capitals.txt">
+    <Content Include="capitals.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
