--- a/SoftwareEngineering/DesignPatterns/DesignPatternsConsole/DesignPatternsConsole.csproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatternsConsole/DesignPatternsConsole.csproj
@@ -43,5 +43,8 @@
       <Name>DesignPatterns</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
