--- a/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/SoftwareEngineering/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -44,6 +44,9 @@
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
+    <Reference Include="MoreLinq">
+      <HintPath>..\packages\morelinq.3.0.0\lib\net451\MoreLinq.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
