--- a/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
+++ b/DotNet/LearnFuncsActionsPreds/LearnFuncsActionsPreds.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>LearnFuncsActionsPreds</RootNamespace>
     <AssemblyName>LearnFuncsActionsPreds</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -52,6 +53,7 @@
     <Compile Include="5to10\DelChaining.cs" />
     <Compile Include="5to10\FuncsActs.cs" />
     <Compile Include="5to10\MulticastDele.cs" />
+    <Compile Include="Expressions\MyExpression.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Review\ReviewerDelegatesFuncActions.cs" />
