--- a/SoftwareEngineering/HackerRank/DataStructures/DataStructures/DataStructures.csproj
+++ b/SoftwareEngineering/HackerRank/DataStructures/DataStructures/DataStructures.csproj
@@ -4,4 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="LinkedList\" />
+  </ItemGroup>
 </Project>
